--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: https://octmun.github.io/landing-page-theme.gethub.io/
 title: Learn2Surf
 email: your-email@domain.com
 author: Octavio Munoz Reynoso
